RESOLVED FIXED169507
Fix memory estimate for layers supporting subpixel-antialised text
https://bugs.webkit.org/show_bug.cgi?id=169507
Summary Fix memory estimate for layers supporting subpixel-antialised text
Simon Fraser (smfr)
Reported 2017-03-10 20:48:33 PST
Fix memory estimate for layers supporting subpixel-antialised text
Attachments
Patch (2.73 KB, patch)
2017-03-10 20:49 PST, Simon Fraser (smfr)
ap: review+
Simon Fraser (smfr)
Comment 1 2017-03-10 20:49:52 PST
Alexey Proskuryakov
Comment 2 2017-03-10 22:18:27 PST
Comment on attachment 304124 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=304124&action=review > Source/WebCore/platform/graphics/ca/cocoa/PlatformCALayerCocoa.mm:1197 > +#if (PLATFORM(IOS) && __IPHONE_OS_VERSION_MIN_REQUIRED >= 90300) Please remove the outmost parentheses. > Source/WebCore/platform/graphics/ca/cocoa/PlatformCALayerCocoa.mm:1202 > +#if (PLATFORM(MAC) && __MAC_OS_X_VERSION_MIN_REQUIRED >= 101200) Please remove the outmost parentheses.
Simon Fraser (smfr)
Comment 3 2017-03-14 16:06:01 PDT
Note You need to log in before you can comment on or make changes to this bug.