Fix memory estimate for layers supporting subpixel-antialised text https://bugs.webkit.org/show_bug.cgi?id=169507 rdar://problem/30979337

Reviewed by Alexey Proskuryakov.

Deep color layers on iOS use 5 bytes per pixel, layers supporting subpixel-antialiaed
text on Mac use 8 bytes per pixel.

* platform/graphics/ca/cocoa/PlatformCALayerCocoa.h:
* platform/graphics/ca/cocoa/PlatformCALayerCocoa.mm:
(PlatformCALayerCocoa::backingStoreBytesPerPixel):

Canonical link: https://commits.webkit.org/186514@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@213767 268f45cc-cd09-0410-ab3c-d52691b4dbfc